[FEATURE] BE: 권한 기반 접근 제어 시스템 구현 - 관리자/사용자 역할 분리
* User 엔티티에 authority 필드 추가 - ADMIN, USER 권한 구분
* JWT 토큰에 권한 정보 포함 - 토큰 기반 역할별 인증 구현
* SecurityConfig 권한 설정 추가 - /admin/** 경로 ADMIN 권한 필수
* 페이지 접근 제어 구현 - 관리자 페이지 권한 검증
* API 응답에 사용자 권한 정보 포함 - 프론트엔드 권한 기반 UI 제어 지원
* UserDetailsImpl 권한 정보 연동 - Spring Security GrantedAuthority 적용
* 역할 기반 라우팅 및 접근 제어 체계 완성
* 관리자 전용 기능 분리를 위한 기반 구조 구축